fix bug create address form on iphone

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -296,6 +296,10 @@ $error-color: #ed4337;
         margin-top: 10px;
         overflow-y: auto;
         overscroll-behavior: contain;
+
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 300px;
+        }
     }
 
     &__option {
@@ -303,7 +307,8 @@ $error-color: #ed4337;
         font-size: 1.4rem;
 
         @include abstracts.screen(lg) {
-            padding: 14px 20px;
+            padding: 18px 30px;
+            font-size: 1.6rem;
         }
 
         &--active {
@@ -342,12 +347,16 @@ $error-color: #ed4337;
         }
 
         @include abstracts.screen(lg) {
-            height: 42px;
+            height: 48px;
+
+            &-icon {
+                width: 20px;
+            }
         }
 
         @include abstracts.screen(sm) {
             border: 1px solid #d2d1d6;
-            margin: 10px 20px 0;
+            margin: 10px 30px 0;
             padding: 0 12px;
             border-radius: 10px;
         }
@@ -358,13 +367,13 @@ $error-color: #ed4337;
         top: 0;
         right: 0;
 
-        padding: 2px 18px;
+        padding: 12px 18px;
         opacity: 0.8;
         font-size: 3rem;
     }
 
     &__dialog-heading {
-        padding: 14px;
+        padding: 20px;
         font-size: 1.8rem;
         font-weight: 600;
         text-align: center;
